  HostMonitor bug fixed, now removes admin server name prefix before checking if the server is already open
  Sonar run
  LoginPanel, refactored, static methods removed
  Sonar run, magic numbers
  EntityConnectionServer, some refactoring
  Util.resolveTrustStore() renamed to resolveTrustStoreFromClasspath()
  EntityDataUtilTest added
  Unit test coverage improved
  Configuration.REGISTRY_PORT_NUMBER renamed to Configuration.REGISTRY_PORT
  HostMonitor bug fixed, only listed servers named RemoteServer.SERVER_ADMIN_PREFIX + Configuration.SERVER_NAME_PREFIX
  DefaultFilteredComboBoxModel.getAllItems() no longer includes the null value
  EntityUtil.setNull() added
  DefaultEntityModel bug fixed, no longer creates an edit model if the supplied table model contains one
  FilteredComboBoxModel.isSelectionEmpty() added, implemented in DefaultFilteredComboBoxModel, tested
  UiUtil.getDateFromUser() dialog using JCalendar now responds to enter (OK) and escape (Cancel) keys
  UiUtil.runWithProgressBar() refactored and overloaded with a cancelAction, now quits silently on CancelException
  DefaultRemoteEntityConnection now synchronizes on it's internal connection proxy instead of itself
  AbstractRemoteServer, connections synchronization improved
  AbstractRemoteServer, disconnect() reduced synchronization time
  AbstractRemoteServer, connect() getLoginProxy() moved out of synchronized block
  AbstractRemoteServer, EntityConnectionServer added logging for connect/disconnect
  DefaultRemoteEntityConnection.isLocalConnectionValid() added
  EntityConnectionServer, maintenance thread now keeps local connections alive via isLocalConnectionValid() along with disconnecting idle ones
  EntityServerMonitorTest added some tests
  UiUtil.runWithProgressBar() overloaded with a northPanel parameter
  DefaultExceptionHandlerTest added
  EntityUiUtilTest improved
  EntityUiUtil.createTristateCheckBox() bug fixed